--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -16,6 +16,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 [float]
 ==== Bug fixes
 - We no longer unconditionally block shutdown for 5 seconds when tail-based sampling is enabled {pull}9838[9838]
+- Fix a panic caused by accepting new grpc connections during shutdown {pull}10013[10013]
 
 [float]
 ==== Intake API Changes
