--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -9,6 +9,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - `transaction.success_count` has been moved to `event.success_count` {pull}9819[9819]
 - Stop indexing transaction metrics to `metrics-apm.internal` {pull}9846[9846]
 - Stop indexing span destination metrics to `metrics-apm.internal` {pull}9926[9926]
+- Service metrics and service summary aggregations are now always enabled {pull}10060[10060]
 
 [float]
 ==== Deprecations
