--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -36,3 +36,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Add `transaction.duration.summary` to transaction metrics {pull}9973[9973]
 - Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
+- Add global labels to service destination metrics {pull}10056[10056]
