--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -40,3 +40,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Service metrics and service summary aggregations are now always enabled {pull}10060[10060]
 - Dedicated overflow buckets for service destination aggregation to limit cardinality {pull}10069[10069]
 - Dedicated overflow buckets for service summary metrics {pull}10061[10061]
+- Set data streams with non-default rollup intervals as hidden {pull}10070[10070]
