[DOCS] Specific callout to anonymous settings & auth
Anonymous settings are considered only if at least one authentication method is enabled

--- a/docs/legacy/configuration-anonymous.asciidoc
+++ b/docs/legacy/configuration-anonymous.asciidoc
@@ -23,6 +23,8 @@ apm-server.auth.anonymous.rate_limit.event_limit: 300
 apm-server.auth.anonymous.rate_limit.ip_limit: 1000
 ----
 
+The anonymous access configuration is ignored if authenticated communication is disabled.
+
 [float]
 [[config-auth-anon-rum]]
 === Real User Monitoring (RUM)
