--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -41,3 +41,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Dedicated overflow buckets for service destination aggregation to limit cardinality {pull}10069[10069]
 - Translate otel log events to error events {pull}10066[10066]
 - Dedicated overflow buckets for service summary metrics {pull}10061[10061]
+- Set data streams with non-default rollup intervals as hidden {pull}10070[10070]
