--- a/changelogs/8.6.asciidoc
+++ b/changelogs/8.6.asciidoc
@@ -3,7 +3,14 @@
 
 https://github.com/elastic/apm-server/compare/8.5\...8.6[View commits]
 
+* <<release-notes-8.6.1>>
 * <<release-notes-8.6.0>>
+
+[float]
+[[release-notes-8.6.1]]
+=== APM version 8.6.1
+
+No significant changes.
 
 [float]
 [[release-notes-8.6.0]]
