--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -37,7 +37,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720] {pull}10088[10088]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
 - Add global labels to service destination metrics {pull}10056[10056]
-- Service metrics and service summary aggregations are now always enabled {pull}10060[10060]
+- Service metrics and service summary aggregations are now always enabled {pull}10060[10060] {pull}10109[10109]
 - Dedicated overflow buckets for service destination aggregation to limit cardinality {pull}10069[10069]
 - Translate otel log events to error events {pull}10066[10066]
 - Dedicated overflow buckets for service summary metrics {pull}10061[10061]
