--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -43,3 +43,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Dedicated overflow buckets for service summary metrics {pull}10061[10061]
 - Set data streams with non-default rollup intervals as hidden {pull}10070[10070]
 - Rename service metrics to service transaction metrics {pull}10095[10095]
+- Add `service.language.name` to service transaction metrics and service summary metrics {pull}10111[10111]
