--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -26,7 +26,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 [float]
 ==== Added
 - Metrics data streams now use synthetic source {pull}9756[9756]
-- Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819]
+- Add `event.success_count` to transaction events and transaction metrics {pull}9819[9819] {pull}10165[10165]
 - Dedicated overflow buckets for transaction and service aggregation to limit cardinality {pull}9856[9856]
 - Automatically scale `MaxGroups` and `MaxTransactionGroups` based on available memory {pull}9856[9856]
 - Set `_doc_count` for service destination metrics {pull}9931[9931]
