--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -33,7 +33,7 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for transaction metrics. Store them into dedicated data streams `metrics-apm.transaction.${interval}` {pull}9846[9846]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service destination metrics. Store them into dedicated data streams `metrics-apm.service_destination.${interval}` {pull}9926[9926]
 - Improve APM UI query performance by producing `1m`, `10m` and `60m` aggregation intervals for service metrics. Store them into dedicated data streams `metrics-apm.service.${interval}` {pull}9960[9960]
-- Add `transaction.duration.summary` to transaction metrics {pull}9973[9973]
+- Add `transaction.duration.summary` to transaction metrics {pull}9973[9973] {pull}10185[10185]
 - Use Elasticsearch fetcher for agent remote configuration where possible {pull}9720[9720] {pull}10088[10088]
 - Add a service summary metrics aggregator that writes to `metrics-apm.service_summary.${interval}` with `1m`, `10m` and `60m` intervals {pull}10029[10029]
 - Add global labels to service destination metrics {pull}10056[10056]
