--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -44,3 +44,4 @@ https://github.com/elastic/apm-server/compare/8.6\...main[View commits]
 - Set data streams with non-default rollup intervals as hidden {pull}10070[10070]
 - Rename service metrics to service transaction metrics {pull}10095[10095]
 - Add `service.language.name` to service transaction metrics and service summary metrics {pull}10111[10111]
+- Reduce memory usage of transaction and service transaction aggregations {pull}10178[10178]
